crates/solite-fmt/src/snapshots/solite_fmt__tests__multiple_comments_before_statement.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- -- first line
-- -- second line
-- -- third line
-- select * from t

-- Output:
-- first line
-- second line
-- third line
select * from t;
