crates/solite-fmt/src/snapshots/solite_fmt__tests__multiple_statements.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- begin; insert into t values (1); commit

-- Output:
begin;
insert into t
values
  (1);
commit;
