crates/solite-fmt/src/snapshots/solite_fmt__tests__multiple_statements_with_comments_and_blank_lines.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- -- asdf
-- select 1 + 2;
-- 
-- -- zxcv
-- select 3 + 4;

-- Output:
-- asdf
select 1 + 2;

-- zxcv
select 3 + 4;
