crates/solite-fmt/src/snapshots/solite_fmt__tests__null_and_booleans.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select null, true, false from t

-- Output:
select
  null,
  1,
  0
from t;
