crates/solite-fmt/src/snapshots/solite_fmt__tests__pragma_get.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- pragma table_info(t)

-- Output:
pragma table_info(t);
