crates/solite-fmt/src/snapshots/solite_fmt__tests__pragma_set.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- pragma foreign_keys = 1

-- Output:
pragma foreign_keys = 1;
