crates/solite-fmt/src/snapshots/solite_fmt__tests__reindex_index.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- reindex idx_t_a

-- Output:
reindex idx_t_a;
